@@ -169,6 +169,8 @@ Trunk (unreleased changes)
    HBASE-703   Invalid regions listed by regionserver.jsp (Izaak Rubin via Stack)
    HBASE-674   Memcache size unreliable
    HBASE-726   Unit tests won't run because of a typo (Sebastien Rainville via Stack)
+   HBASE-727   Client caught in an infinite loop when trying to connect to cached
+               server locations (Izaak Rubin via Stack)
    
   IMPROVEMENTS
    HBASE-559   MR example job to count table rows
